--- a/ft_tools/package.xml
+++ b/ft_tools/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="thibault.poignonec@gmail.com">tpoignonec</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_test</buildtool_depend>
