--- a/ft_tools/config/config_ft_calibration.yaml
+++ b/ft_tools/config/config_ft_calibration.yaml
@@ -10,7 +10,8 @@ ft_calibration_node:
       sensor_frame:
         id: ft_sensor
       gravity_in_reference_frame: [0.0, 0.0, -9.81]
-      filename: calib.yaml
+      calibration_filename: calibration.yaml
+      calibration_package: ft_tools
 
     kinematics:
       plugin_name: kinematics_interface_kdl/KinematicsInterfaceKDL
