--- a/ft_tools/package.xml
+++ b/ft_tools/package.xml
@@ -14,6 +14,7 @@
   <depend>ft_msgs</depend>
 
   <depend>rclcpp</depend>
+  <depend>ament_index_cpp</depend>
   <depend>eigen3_cmake_module</depend>
   <depend>tf2_eigen</depend>
   <depend>tf2_eigen_kdl</depend>
