add srv to ft_estimation_node

--- a/ft_tools/config/calibration.yaml
+++ b/ft_tools/config/calibration.yaml
@@ -1,4 +1,13 @@
-mass: 0.0
-sensor_frame_to_com: [0.0, 0.0, 0.0]
-force_offset: [0.0, 0.0, 0.0]
-torque_offset: [0.0, 0.0, 0.0]
+mass: 0
+sensor_frame_to_com:
+  - 0
+  - 0
+  - 0
+force_offset:
+  - 0
+  - 0
+  - 0
+torque_offset:
+  - 0
+  - 0
+  - 0
