--- a/.github/workflows/ci-iron.yaml
+++ b/.github/workflows/ci-iron.yaml
@@ -16,4 +16,4 @@ jobs:
           use-ros2-testing: true
       - uses: ros-tooling/action-ros-ci@v0.3
         with:
-          target-ros2-distro: rolling
+          target-ros2-distro: iron
