--- a/.github/workflows/ci-rolling.yaml
+++ b/.github/workflows/ci-rolling.yaml
@@ -15,5 +15,6 @@ jobs:
         with:
           use-ros2-testing: true
       - uses: ros-tooling/action-ros-ci@v0.3
+        continue-on-error: true
         with:
           target-ros2-distro: rolling
