--- a/.github/workflows/ci-iron.yaml
+++ b/.github/workflows/ci-iron.yaml
@@ -11,6 +11,7 @@ jobs:
     container:
       image: ubuntu:jammy
     steps:
+      - uses: actions/checkout@v4
       - uses: ros-tooling/setup-ros@v0.7
         with:
           use-ros2-testing: true
