add ros2 control config

--- a/ft_tools_examples/CMakeLists.txt
+++ b/ft_tools_examples/CMakeLists.txt
@@ -15,7 +15,7 @@ if(BUILD_TESTING)
 endif()
 
 install(
-  DIRECTORY launch config
+  DIRECTORY config launch ros2_control
   DESTINATION share/${PROJECT_NAME}
 )
 
